 ## This file is part of Invenio.
 ## Copyright (C) 2010, 2011 CERN.
 ##
 ## Invenio is free software; you can redistribute it and/or
 ## modify it under the terms of the GNU General Public License as
 ## along with Invenio; if not, write to the Free Software Foundation, Inc.,
 ## 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
 
pylibdir=$(libdir)/python/invenio/bibupload_preprocess
 
pylib_DATA = __init__.py bp_pre_ingestion.py
 
EXTRA_DIST = $(pylib_DATA)
